security_group.tf
resource "aws_security_group" "cltt_sg" {
  description = "codelovers dev security group"
  vpc_id      = aws_vpc.cltt_vpc.id
  dynamic "ingress" {
    iterator = port
    for_each = var.ingressrules
    content {
      from_port   = port.value
      to_port     = port.value
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
  }
  dynamic "egress" {
    iterator = port
    for_each = var.egressrules
    content {
      from_port   = port.value
      to_port     = port.value
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }

  }
  tags = {
    Name : "cltt_dev_sg"
  }
}

resource "aws_security_group" "cltt_sg_bastion" {
  vpc_id = aws_vpc.cltt_vpc.id
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name : "cltt_bastion_host_sg"
  }
}
